--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "emoji-patterns",
-  "version": "12.0.0",
-  "description": "Get emoji regular expression patterns from Unicode 12.0 data files",
+  "version": "12.1.0",
+  "description": "Get emoji regular expression patterns from Emoji 12.1 data files",
   "main": "index.js",
   "scripts": {
-    "test": "node test.js"
+    "test": "node test.js",
+    "dump": "node dump.js"
   },
   "repository": {
     "type": "git",
